syntax = "proto2";
package org.jetbrains.kotlin.backend.jvm.serialization.proto;
import "compiler/ir/serialization.common/src/KotlinIr.proto";

option java_outer_classname = "JvmIr";
option optimize_for = LITE_RUNTIME;

/* Stored in JVM .class annotations */

message UniqIdInfo {
  required int64 id = 1;
  required common.serialization.proto.String toplevel_fq_name = 2;
}

message UniqIdTable {
  repeated UniqIdInfo infos = 1;
}

message ExternalReference {
  required int64 id = 1;
  required int32 index = 2; /* index into the table of packages in ExternalRefs */
}

message JvmExternalPackage {
  required string fq_name = 1;
  required common.serialization.proto.IrDeclarationContainer declaration_container = 2;
}

message ExternalRefs {
  repeated JvmExternalPackage packages = 1;
  repeated ExternalReference references = 2;
}

message AuxTables {
  required common.serialization.proto.IrSymbolTable symbol_table = 1;
  required common.serialization.proto.IrTypeTable type_table = 2;
  required common.serialization.proto.StringTable string_table = 3;
  required ExternalRefs external_refs = 4;
  required UniqIdTable uniq_id_table = 5;
}

message JvmIrFile {
  required common.serialization.proto.IrDeclarationContainer declaration_container = 1;
  required common.serialization.proto.Annotations annotations = 2;
  required string facade_fq_name = 3;
  required AuxTables aux_tables = 4;
}

message JvmIrClass {
  required common.serialization.proto.IrClass ir_class = 1;
  required AuxTables aux_tables = 2;
}
